# visual-commentary-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: how-to-use-zh.md  p3-mini-video-planner-design-zh.md  parameter-tuning-guide-zh.md  solution-principles-zh.md
scripts/: visual_commentary_pipeline.py
tests/: test_enhanced_pipeline.py  test_graph.py  test_video_commentary.py
video_commentary/: __init__.py  azure_auth.py  content_understanding.py  core.py  duration_policy.py  graph.py  graph_state.py  llm_critic.py  pipeline.py  planner.py  qa_gate.py  segment_policy.py  state.py  vision_enricher.py
